feat(api): update API version to 0.0.2 and enhance Swagger documentation for healthcheck and post endpoints
